--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>ShareFun</title>
 		<link rel = 'stylesheet' type = 'text/css'
       href = 'https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css'>
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="/dist/index.css">
   </head>
   <body>
     <div id="root">
