--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<link rel = 'stylesheet' type = 'text/css'
       href = 'https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css'>
     <link rel="stylesheet" href="/dist/index.css">
+    <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Tangerine|Muli">
   </head>
   <body>
     <div id="root">
