--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       href = 'https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css'>
     <link rel="stylesheet" href="/dist/index.css">
     <link rel="stylesheet" type="text/css"
-      href="https://fonts.googleapis.com/css?family=Tangerine|Muli">
+      href="https://fonts.googleapis.com/css?family=Tangerine|Muli|Inconsolata">
   </head>
   <body>
     <div id="root">
